[tool.poetry]
name = "test_export"
version = "0.1.0"
description = "Test exporting poetry with dependencies and not"
authors = ["Indico Data <engineering@indicodata.ai>"]
packages = [ {include = "test_export"}]

[tool.poetry.dependencies]
python = "~3.10"
requests = "*"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
